; ModuleID = '/home/carl/AnghaBench/citus/src/backend/distributed/utils/extr_metadata_cache.c_EnsureModificationsCanRun.c'
source_filename = "/home/carl/AnghaBench/citus/src/backend/distributed/utils/extr_metadata_cache.c_EnsureModificationsCanRun.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@WritableStandbyCoordinator = common dso_local global i32 0, align 4
@ERROR = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [49 x i8] c"writing to worker nodes is not currently allowed\00", align 1
@.str.1 = private unnamed_addr constant [33 x i8] c"the database is in recovery mode\00", align 1
@ReadFromSecondaries = common dso_local global i64 0, align 8
@USE_SECONDARY_NODES_ALWAYS = common dso_local global i64 0, align 8
@.str.2 = private unnamed_addr constant [45 x i8] c"citus.use_secondary_nodes is set to 'always'\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @EnsureModificationsCanRun() #0 {
  %1 = call i64 (...) @RecoveryInProgress()
  %2 = icmp ne i64 %1, 0
  br i1 %2, label %3, label %11

3:                                                ; preds = %0
  %4 = load i32, i32* @WritableStandbyCoordinator, align 4
  %5 = icmp ne i32 %4, 0
  br i1 %5, label %11, label %6

6:                                                ; preds = %3
  %7 = load i32, i32* @ERROR, align 4
  %8 = call i32 @errmsg(i8* getelementptr inbounds ([49 x i8], [49 x i8]* @.str, i64 0, i64 0))
  %9 = call i32 @errdetail(i8* getelementptr inbounds ([33 x i8], [33 x i8]* @.str.1, i64 0, i64 0))
  %10 = call i32 @ereport(i32 %7, i32 %9)
  br label %11

11:                                               ; preds = %6, %3, %0
  %12 = load i64, i64* @ReadFromSecondaries, align 8
  %13 = load i64, i64* @USE_SECONDARY_NODES_ALWAYS, align 8
  %14 = icmp eq i64 %12, %13
  br i1 %14, label %15, label %20

15:                                               ; preds = %11
  %16 = load i32, i32* @ERROR, align 4
  %17 = call i32 @errmsg(i8* getelementptr inbounds ([49 x i8], [49 x i8]* @.str, i64 0, i64 0))
  %18 = call i32 @errdetail(i8* getelementptr inbounds ([45 x i8], [45 x i8]* @.str.2, i64 0, i64 0))
  %19 = call i32 @ereport(i32 %16, i32 %18)
  br label %20

20:                                               ; preds = %15, %11
  ret void
}

declare dso_local i64 @RecoveryInProgress(...) #1

declare dso_local i32 @ereport(i32, i32) #1

declare dso_local i32 @errmsg(i8*) #1

declare dso_local i32 @errdetail(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
